--- a/revamp/08.2_phys-enrich-plots.Rmd
+++ b/revamp/08.2_phys-enrich-plots.Rmd
@@ -22,7 +22,7 @@ library("viridis")
 serv.dir <- "/home/jason/science/servers/FUSE5/"
 
 proj.dir <- serv.dir %&% "projects/t2d_classification/"
-work.dir <- proj.dir %&% "method_C/"
+work.dir <- proj.dir %&% "revamp/"
 plot.dir <- work.dir %&% "plots/"
 
 
@@ -65,31 +65,21 @@ mod_thresh <- function(enrich.df){
   return(enrich.df)
 }
 
-df1a <- fread(work.dir %&% "analysis_files/phys71-enrich_unweighted.txt") %>% mod_thresh(.)
 df1b <- fread(work.dir %&% "analysis_files/phys71-enrich_weighted.txt") %>% mod_thresh(.)
-df1a$physiology <- gsub("_"," ",df1a$physiology)
 df1b$physiology <- gsub("_"," ",df1b$physiology)
 
-df2a <- fread(work.dir %&% "analysis_files/phys94-enrich_unweighted.txt") %>% mod_thresh(.)
 df2b <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted.txt") %>% mod_thresh(.)
-df2a$physiology <- gsub("_"," ",df2a$physiology)
 df2b$physiology <- gsub("_"," ",df2b$physiology)
 
 
-plt1a <- phys_enrich_plot(df1a,myname="Physiology enrichment for classifed loci (unweighted)")
 plt1b <- phys_enrich_plot(df1b,myname="Physiology enrichment for classifed loci (weighted)")
 
-plt2a <- phys_enrich_plot(df2a,myname="Physiology enrichment for classifed loci (unweighted)")
 plt2b <- phys_enrich_plot(df2b,myname="Physiology enrichment for classifed loci (weighted)")
 
-ggsave(plot=plt1a,filename = plot.dir %&% "enrichment-phys_unweighted-71.png",width=8,height=5)
 ggsave(plot=plt1b,filename = plot.dir %&% "enrichment-phys_weighted-71.png",width=8,height=5)
-ggsave(plot=plt2a,filename = plot.dir %&% "enrichment-phys_unweighted-94.png",width=8,height=8)
 ggsave(plot=plt2b,filename = plot.dir %&% "enrichment-phys_weighted-94.png",width=8,height=8)
 
-ggsave(plot=plt1a,filename = plot.dir %&% "enrichment-phys_unweighted-71.pdf",width=8,height=5)
 ggsave(plot=plt1b,filename = plot.dir %&% "enrichment-phys_weighted-71.pdf",width=8,height=5)
-ggsave(plot=plt2a,filename = plot.dir %&% "enrichment-phys_unweighted-94.pdf",width=8,height=8)
 ggsave(plot=plt2b,filename = plot.dir %&% "enrichment-phys_weighted-94.pdf",width=8,height=8)
 
 ```
@@ -127,31 +117,21 @@ phys_enrich_plot_v2 <- function(enrich.df,myname,nc=5){
 
 
 ```{r}
-df3a <- fread(work.dir %&% "analysis_files/phys71-enrich_unweighted-V2.txt") %>% mod_thresh(.)
 df3b <- fread(work.dir %&% "analysis_files/phys71-enrich_weighted-V2.txt") %>% mod_thresh(.)
-df3a$physiology <- gsub("_"," ",df3a$physiology)
 df3b$physiology <- gsub("_"," ",df3b$physiology)
 
-df4a <- fread(work.dir %&% "analysis_files/phys94-enrich_unweighted-V2.txt") %>% mod_thresh(.)
 df4b <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted-V2.txt") %>% mod_thresh(.)
-df4a$physiology <- gsub("_"," ",df4a$physiology)
 df4b$physiology <- gsub("_"," ",df4b$physiology)
 
 
-plt3a <- phys_enrich_plot_v2(df3a,myname="Physiology enrichment for classifed loci (unweighted)")
 plt3b <- phys_enrich_plot_v2(df3b,myname="Physiology enrichment for classifed loci (weighted)")
-plt4a <- phys_enrich_plot_v2(df4a,myname="Physiology enrichment for classifed loci (unweighted)")
 plt4b <- phys_enrich_plot_v2(df4b,myname="Physiology enrichment for classifed loci (weighted)")
 
 
-ggsave(plot=plt3a,filename = plot.dir %&% "enrichment-phys_unweighted-71-V2.png",width=8,height=3)
 ggsave(plot=plt3b,filename = plot.dir %&% "enrichment-phys_weighted-71-V2.png",width=8,height=3)
-ggsave(plot=plt4a,filename = plot.dir %&% "enrichment-phys_unweighted-94-V2.png",width=12,height=3)
 ggsave(plot=plt4b,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.png",width=12,height=3)
 
-ggsave(plot=plt3a,filename = plot.dir %&% "enrichment-phys_unweighted-71-V2.pdf",width=8,height=3)
 ggsave(plot=plt3b,filename = plot.dir %&% "enrichment-phys_weighted-71-V2.pdf",width=8,height=3)
-ggsave(plot=plt4a,filename = plot.dir %&% "enrichment-phys_unweighted-94-V2.pdf",width=12,height=3)
 ggsave(plot=plt4b,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.pdf",width=12,height=3)
 ```
 
