--- a/revamp/09_visualize-enrichments.Rmd
+++ b/revamp/09_visualize-enrichments.Rmd
@@ -22,10 +22,9 @@ serv.dir <- "/home/jason/science/servers/FUSE5/"
 #serv.dir <- "/Users/jtorres/FUSE5/"
 
 proj.dir <- serv.dir %&% "projects/t2d_classification/"
-work.dir <- proj.dir %&% "method_C/"
+work.dir <- proj.dir %&% "revamp/"
 plot.dir <- work.dir %&% "plots/"
 
-#cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 
 ```
 
@@ -67,26 +66,11 @@ eqtl_enrich_plot <- function(enrich.df,myname){
  
 ```
 
-```{r}
-
-#unweighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_unweighted.txt")
-#weighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_weighted.txt")
-
-#plt1 <- eqtl_enrich_plot(unweighted.df,myname="eQTL enrichment for classifed loci (unweighted)")
-#ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl_unweighted.png",width=7,height=4)
-#plt2 <- eqtl_enrich_plot(weighted.df,myname="eQTL enrichment for classifed loci (weighted)")
-#ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl_weighted.png",width=7,height=4)
-
-```
-
 
 ```{r}
 
-df1 <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_unweighted.txt")
 df2 <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_weighted.txt")
 
-plt1 <- eqtl_enrich_plot(df1,myname="eQTL enrichment for classifed loci (unweighted)")
-ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl-specific_unweighted.png",width=9,height=6.5)
 plt2 <- eqtl_enrich_plot(df2,myname="eQTL enrichment for classifed loci (weighted)")
 ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl-specific_weighted.png",width=9,height=6.5)
 
@@ -96,11 +80,8 @@ ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl-specific_weighted.png"
 
 ```{r}
 
-df3 <- fread(work.dir %&% "analysis_files/downsampled_eqtl-specific-validation_unweighted.txt")
 df4 <- fread(work.dir %&% "analysis_files/downsampled_eqtl-specific-validation_weighted.txt")
 
-plt3 <- eqtl_enrich_plot(df3,myname="eQTL enrichment for classifed loci (unweighted, downsampled)")
-ggsave(plot=plt3,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_unweighted.png",width=9,height=6.5)
 plt4 <- eqtl_enrich_plot(df4,myname="eQTL enrichment for classifed loci (weighted, downsampled)")
 ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.png",width=8,height=6)
 ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.pdf",width=8,height=6)
@@ -152,15 +133,6 @@ read_input <- function(readstring="atac-enrichment_unweighted_thresh"){
   return(out.df)
 }
 
-#df5 <- read_input("atac-enrichment_unweighted_thresh")
-#df6 <- read_input("atac-enrichment_weighted_thresh")
-
-
-#plt5 <- atac_enrich_plot(df5,myname="ATAC enrichment for classifed loci (unweighted)")
-#ggsave(plot=plt5,filename = plot.dir %&% "enrichment-atac_unweighted.png",width=12,height=8)
-#plt6 <- atac_enrich_plot(df6,myname="ATAC enrichment for classifed loci (weighted)")
-#ggsave(plot=plt6,filename = plot.dir %&% "enrichment-atac_weighted.png",width=12,height=8)
-
 
 ```
 
@@ -181,12 +153,9 @@ read_input <- function(readstring="downsample_atac-enrichment_unweighted_thresh"
   return(out.df)
 }
 
-df5 <- read_input("downsample_atac-enrichment_unweighted_thresh")
 df6 <- read_input("downsample_atac-enrichment_weighted_thresh")
 
 
-plt5 <- atac_enrich_plot(df5,myname="ATAC enrichment for classifed loci (unweighted, downsampled)")
-ggsave(plot=plt5,filename = plot.dir %&% "downsampled_enrichment-atac_unweighted.png",width=9,height=6.5)
 plt6 <- atac_enrich_plot(df6,myname="ATAC enrichment for classifed loci (weighted, downsampled)")
 ggsave(plot=plt6,filename = plot.dir %&% "downsampled_enrichment-atac_weighted.png",width=9,height=6.5)
 
@@ -208,111 +177,5 @@ filter(df6,atac=="liver",tissue=="liver")
 filter(df6,atac=="muscle",tissue=="muscle")
 
 ```
-
-
-
-# Physiology (hard clustering) enrichment 
-
-
-```{r}
-
-phys_enrich_plot <- function(enrich.df,myname){
-  ggplot(data=enrich.df,aes(x=tissue,y=enrichment)) + 
-    geom_point(size=2,aes(fill=-log(p,base=10)),shape=21) + #,shape=as.factor(threshold))) + 
-    facet_wrap(~physiology+threshold) + 
-    theme_bw() + 
-    #scale_shape_manual(values=c(21,22,23,24),name="Classifer Threshold") +
-    scale_fill_gradient2(low=viridis(n=2)[2],high=viridis(n=2)[1],
-                         midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
-    xlab("Classified Tissue") + ylab("Enrichment") + 
-    ggtitle(myname) +
-    theme(axis.text.x=element_text(angle=30,vjust=0.6))
-}
-
-
-
-```
-
-```{r}
-
-mod_thresh <- function(enrich.df){
-  enrich.df$threshold <- gsub("assigned_","0.",enrich.df$threshold)
-  return(enrich.df)
-}
-
-df7 <- fread(work.dir %&% "analysis_files/phys-enrich_unweighted.txt") %>% mod_thresh(.)
-df8 <- fread(work.dir %&% "analysis_files/phys-enrich_weighted.txt") %>% mod_thresh(.)
-df7$physiology <- gsub("_"," ",df7$physiology)
-df8$physiology <- gsub("_"," ",df8$physiology)
-
-plt7 <- phys_enrich_plot(df7,myname="Physiology enrichment for classifed loci (unweighted)")
-ggsave(plot=plt7,filename = plot.dir %&% "enrichment-phys_unweighted.png",width=8,height=5)
-plt8 <- phys_enrich_plot(df8,myname="Physiology enrichment for classifed loci (weighted)")
-ggsave(plot=plt8,filename = plot.dir %&% "enrichment-phys_weighted.png",width=8,height=5)
-
-
-```
-
-# Lookups 
-
-```{r}
-
-filter(df7,physiology=="BMI-Dys",p<=0.05)
-filter(df7,physiology=="Insulin_Action",p<=0.05)
-filter(df7,physiology=="Insulin_Secretion",p<=0.05)
-
-filter(df8,physiology=="BMI-Dys",p<=0.05)
-filter(df8,physiology=="Insulin_Action",p<=0.05)
-filter(df8,physiology=="Insulin_Secretion",p<=0.05)
-
-```
-
-
-
-## Version 2 
-
-
-```{r}
-
-
-phys_enrich_plot_v2 <- function(enrich.df,myname){
-  ggplot(data=enrich.df,aes(x=physiology,y=enrichment)) + 
-    geom_point(size=2,aes(fill=-log(p,base=10)),shape=21) +
-    facet_wrap(~tissue) + 
-    theme_bw() + 
-    scale_fill_gradient2(low=viridis(n=2)[2],high=viridis(n=2)[1],
-                         midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
-    xlab("Classified Locus") + ylab("Enrichment") + 
-    ggtitle(myname) +
-    theme(axis.text.x=element_text(angle=30,vjust=0.6))
-}
-
-df9 <- fread(work.dir %&% "analysis_files/phys-enrich-V2_unweighted.txt") 
-df10 <- fread(work.dir %&% "analysis_files/phys-enrich-V2_weighted.txt") 
-df9$physiology <- gsub("_"," ",df9$physiology)
-df10$physiology <- gsub("_"," ",df10$physiology)
-plt9 <- phys_enrich_plot_v2(df9,myname="Physiology enrichment for classifed loci (unweighted)")
-ggsave(plot=plt9,filename = plot.dir %&% "enrichment-phys-V2_unweighted.png",width=6.5,height=3.5)
-plt10 <- phys_enrich_plot_v2(df10,myname="Physiology enrichment for classifed loci (weighted)")
-ggsave(plot=plt10,filename = plot.dir %&% "enrichment-phys-V2_weighted.png",width=6.5,height=3.5)
-
-```
-
-
-Lookups 
-
-
-```{r}
-
-filter(df9,physiology=="BMI-Dys")
-filter(df9,physiology=="Insulin_Action")
-filter(df9,physiology=="Insulin_Secretion")
-
-filter(df10,physiology=="BMI-Dys")
-filter(df10,physiology=="Insulin_Action")
-filter(df10,physiology=="Insulin_Secretion")
-
-```
-
 
 
