--- a/revamp/08.1_V_physiology-loci-enrichment.Rmd
+++ b/revamp/08.1_V_physiology-loci-enrichment.Rmd
@@ -33,9 +33,10 @@ cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 write.dir <- work.dir   
 
 
-phys71.df <- fread(proj.dir %&% "analysis_files/physiology-hard.txt")
-phys94.df <- fread(proj.dir %&% "analysis_files/physiology-fuzzy.txt")
-names(phys94.df)[2] <- "Physiology" 
+phys94.df <- fread(work.dir %&% "analysis_files/phys94-ld-assigned.txt") %>%
+  filter(.,assigned.r2>=0.1)
+  
+
 
 ```
 
@@ -111,9 +112,7 @@ build_enrich_df <- function(class.df,phys.df){
 
 ```{r}
 
-df3 <- build_enrich_df(weighted.df,phys71.df)
-write.table(x=df3,file = write.dir %&% "analysis_files/" %&% 
-              "phys71-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
+
 df4 <- build_enrich_df(weighted.df,phys94.df)
 write.table(x=df4,file = write.dir %&% "analysis_files/" %&% 
               "phys94-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
@@ -175,9 +174,6 @@ build_enrich_df_v2 <- function(class.df,phys.df){
 
 ```{r}
 
-df3b <- build_enrich_df_v2(weighted.df,phys71.df)
-write.table(x=df3b,file = write.dir %&% "analysis_files/" %&% 
-              "phys71-enrich_weighted-V2.txt",sep="\t",quote=F,row.names=F)
 df4b <- build_enrich_df_v2(weighted.df,phys94.df)
 write.table(x=df4b,file = write.dir %&% "analysis_files/" %&% 
               "phys94-enrich_weighted-V2.txt",sep="\t",quote=F,row.names=F)
