--- a/revamp/06_V_fine-mapping.Rmd
+++ b/revamp/06_V_fine-mapping.Rmd
@@ -62,15 +62,9 @@ Read data files
 block.df <- fread(methA.dir %&%"multi_results/results_blocks.txt",sep="\t")
 fcred.df <- fread(methA.dir %&%"multi_results/results_func-cred-sets.txt",sep="\t")
 
-##unweighted.df <- fread(work.dir %&% "analysis_files/" %&% 
-##                     "classified-loci_unweighted.txt") %>% append_condid(.)
 weighted.df <- fread(work.dir %&% "analysis_files/" %&% 
                      "classified-loci_weighted.txt") 
 
-##unweighted.df$assigned_00 <- gsub("other","unclassified",unweighted.df$assigned_00)
-##unweighted.df$assigned_20 <- gsub("other","unclassified",unweighted.df$assigned_20)
-##unweighted.df$assigned_50 <- gsub("other","unclassified",unweighted.df$assigned_50)
-##unweighted.df$assigned_80 <- gsub("other","unclassified",unweighted.df$assigned_80)
 
 weighted.df$assigned_00 <- gsub("other","unclassified",weighted.df$assigned_00)
 weighted.df$assigned_20 <- gsub("other","unclassified",weighted.df$assigned_20)
@@ -223,7 +217,6 @@ make_test_plot <- function(group.df){
                                                  "adipose",
                                                  "peripheral",
                                                  "unclassified"))
-  #col.vec <- c("olivedrab2","gold1","grey","brown","red","ghostwhite")
   plt1 <- ggplot(data=test.df,aes(x=Group,y=-log(w.pval.max,base=10))) + 
     geom_point(shape=21,color="black",
                fill="grey",size=2) + 
@@ -236,20 +229,6 @@ make_test_plot <- function(group.df){
     ggtitle("Improvement of max PPA over null") + 
     theme(axis.text.x=element_text(angle=30,vjust=0.6)) + 
     xlab("Classified Tissue")
-            #subtitle="Mean of Islet-only fgwas = " %&% round(mean(comp.df$islet.max.vs.null),5) %&% 
-            #"\nMean of multi-tissue fgwas = " %&% round(mean(comp.df$multi.max.vs.null),5))
-    
-  #plt2 <- ggplot(data=test.df,aes(x=Group,y=-log(w.pval.num,base=10))) + 
-   # geom_point(shape=21,color="black",
-    #           fill=brewer.pal(11,"Spectral")[9],size=2) + 
-    ##facet_wrap(~threshold) + 
-    #scale_y_continuous(limits=c(0,3),breaks=seq(0,3,0.5)) + 
-    #theme_bw() + geom_hline(yintercept=-log(0.05,base=10),
-    #                        color="firebrick3",linetype=2) + 
-    #ylab(expression(-log[10](p[value]))) + 
-    #ggtitle("Wilcoxon test for difference in change of credible set size vs null")
-   #         subtitle="Median of Islet-only fgwas = " %&% round(median(comp.df$islet.num.vs.null),1) %&% 
-   #         "\nMedian of multi-tissue fgwas = " %&% round(median(comp.df$multi.num.vs.null),1))
   return(list(plt1,test.df,comp.df))
 }
 
@@ -272,10 +251,24 @@ ggsave(plot=plt.list1[[1]],filename=plot.dir%&%"finemap_wilcox-compare-max_weigh
 
 ```{r}
 
+count.df <- fread(work.dir %&% "analysis_files/classifier_counts.txt")
+names(count.df) <- c("Threshold","adipose","islet","liver","muscle","unclassified")
+plt.df <- plt.list1[[2]]
+plt.df$count <- map(1:dim(plt.df)[1],function(i){
+  row.df <- plt.df[i,]
+  count <- filter(count.df,Threshold==row.df$threshold) %>% 
+    dplyr::select(.,one_of(as.character(unique(row.df$Group)))) %>% as.integer(.)
+  if (row.df$Group=="peripheral"){
+    count <- filter(count.df,Threshold==row.df$threshold) %>% 
+      dplyr::select(.,one_of("adipose","liver","muscle")) %>% sum(.)  
+  }
+  return(count)
+}) %>% as.integer(.)
+
 library("viridis")
-  plt1 <- ggplot(data=plt.list1[[2]],aes(x=Group,y=-log(w.pval.max,base=10))) + 
+  plt1 <- ggplot(data=plt.df,aes(x=Group,y=-log(w.pval.max,base=10))) + 
     geom_point(shape=21,color="black",
-               fill=magma(10)[3],size=2) + 
+               fill=magma(10)[3],aes(size=count)) + 
     facet_wrap(~threshold,ncol=4) + 
     scale_y_continuous(limits=c(0,3),breaks=seq(0,3,0.5)) + 
     theme_bw() + geom_hline(yintercept=-log(0.05,base=10),
@@ -291,18 +284,6 @@ library("viridis")
 
 ggsave(plot=plt1,filename=plot.dir%&%"finemap_wilcox-compare-max_weightedV2.png",height=3,width=8)  
 ggsave(plot=plt1,filename=plot.dir%&%"finemap_wilcox-compare-max_weightedV2.pdf",height=3,width=8)    
-```
-
-
-
-# Unweighted
-
-```{r}
-
-##plt.list2 <- make_test_plot(unweighted.df)
-##ggsave(plot=plt.list2[[1]],filename=plot.dir%&%"finemap_wilcox-compare-max_unweighted.png",height=3.5,width=4)
-
-
 ```
 
 
