--- a/revamp/08.2_phys-enrich-plots.Rmd
+++ b/revamp/08.2_phys-enrich-plots.Rmd
@@ -37,7 +37,7 @@ plot.dir <- work.dir %&% "plots/"
 
 phys_enrich_plot <- function(enrich.df,myname,nc=4){
   plt <- ggplot(data=enrich.df,aes(x=tissue,y=enrichment)) + 
-    geom_point(size=2,aes(fill=-log(p,base=10)),shape=21) + 
+    geom_point(aes(size=count,fill=-log(p,base=10)),shape=21) + 
     facet_wrap(~physiology+threshold,ncol=nc) + 
     theme_bw() + 
     scale_fill_gradient2(low=viridis(n=50)[48],high=viridis(n=50)[10],
@@ -49,7 +49,7 @@ phys_enrich_plot <- function(enrich.df,myname,nc=4){
     theme(axis.text.x=element_text(vjust=0.6,angle=30),
           panel.grid.minor = element_blank(),
           panel.grid.major.x=element_blank(),
-          legend.key = element_rect(color="black",size=3),
+          #legend.key = element_rect(color="black",size=3),
           strip.background =element_rect(fill="ghostwhite"),
           strip.text = element_text(colour = magma(n=2)[1]))
 }
@@ -65,18 +65,65 @@ mod_thresh <- function(enrich.df){
   return(enrich.df)
 }
 
+df1 <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted.txt") %>%
+ mod_thresh(.)
+df1$physiology <- gsub("_"," ",df1$physiology)
+df1$threshold <- as.numeric(df1$threshold)
+
+count.df1 <- fread(work.dir%&%"analysis_files/classifier_counts.txt")
+names(count.df1) <- c("Threshold","adipose","islet",
+                      "liver","muscle","unclassified")
+
+df1$count <- map(1:dim(df1)[1],function(i){
+  row.df <- df1[i,]
+  count <- filter(count.df1,Threshold==row.df$threshold) %>% 
+    dplyr::select(.,one_of(as.character(unique(row.df$tissue)))) %>% as.integer(.)
+  if (row.df$tissue=="peripheral"){
+    count <- filter(count.df1,Threshold==row.df$threshold) %>% 
+      dplyr::select(.,one_of("adipose","liver","muscle")) %>% sum(.)  
+  }
+  return(count)
+}) %>% as.integer(.)
+
+plt1 <- phys_enrich_plot(df1,myname="Physiology enrichment for classifed loci (weighted)")
+
+ggsave(plot=plt1,filename = plot.dir %&% "enrichment-phys_weighted-94.png",width=8,height=8)
+ggsave(plot=plt1,filename = plot.dir %&% "enrichment-phys_weighted-94.pdf",width=8,height=8)
+
+```
 
 
-df2b <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted.txt") %>% mod_thresh(.)
-df2b$physiology <- gsub("_"," ",df2b$physiology)
+```{r}
 
+mod_thresh <- function(enrich.df){
+  enrich.df$threshold <- gsub("assigned_","0.",enrich.df$threshold)
+  return(enrich.df)
+}
 
+df2 <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted_with-shared.txt") %>%
+ mod_thresh(.)
+df2$physiology <- gsub("_"," ",df2$physiology)
+df2$threshold <- as.numeric(df2$threshold)
 
-plt2b <- phys_enrich_plot(df2b,myname="Physiology enrichment for classifed loci (weighted)")
+count.df2 <- fread(work.dir%&%"analysis_files/classifier_counts_with-shared.txt")
+names(count.df2) <- c("Threshold","adipose","islet",
+                      "liver","muscle","shared","unclassified")
 
-ggsave(plot=plt2b,filename = plot.dir %&% "enrichment-phys_weighted-94.png",width=8,height=8)
+df2$count <- map(1:dim(df2)[1],function(i){
+  row.df <- df2[i,]
+  count <- filter(count.df2,Threshold==row.df$threshold) %>% 
+    dplyr::select(.,one_of(as.character(unique(row.df$tissue)))) %>% as.integer(.)
+  if (row.df$tissue=="peripheral"){
+    count <- filter(count.df2,Threshold==row.df$threshold) %>% 
+      dplyr::select(.,one_of("adipose","liver","muscle")) %>% sum(.)  
+  }
+  return(count)
+}) %>% as.integer(.)
 
-ggsave(plot=plt2b,filename = plot.dir %&% "enrichment-phys_weighted-94.pdf",width=8,height=8)
+plt2 <- phys_enrich_plot(df2,myname="Physiology enrichment for classifed loci (weighted)")
+
+ggsave(plot=plt2,filename = plot.dir %&% "enrichment-phys_weighted-94_with-shared.png",width=8,height=8)
+ggsave(plot=plt2,filename = plot.dir %&% "enrichment-phys_weighted-94_with-shared.pdf",width=8,height=8)
 
 ```
 
@@ -90,7 +137,7 @@ ggsave(plot=plt2b,filename = plot.dir %&% "enrichment-phys_weighted-94.pdf",widt
 
 phys_enrich_plot_v2 <- function(enrich.df,myname,nc=5){
   ggplot(data=enrich.df,aes(x=physiology,y=enrichment)) + 
-    geom_point(size=2,aes(fill=-log(p,base=10)),shape=21) +
+    geom_point(aes(size=counts,fill=-log(p,base=10)),shape=21) +
     facet_wrap(~tissue,ncol=nc) + 
     theme_bw() + 
     scale_fill_gradient2(low=viridis(n=50)[48],high=viridis(n=50)[10],
@@ -102,7 +149,7 @@ phys_enrich_plot_v2 <- function(enrich.df,myname,nc=5){
     theme(axis.text.x=element_text(vjust=0.6,angle=30),
           panel.grid.minor = element_blank(),
           panel.grid.major.x=element_blank(),
-          legend.key = element_rect(color="black",size=3),
+          #legend.key = element_rect(color="black",size=3),
           strip.background =element_rect(fill="ghostwhite"),
           strip.text = element_text(colour = magma(n=2)[1]))
 }
@@ -114,19 +161,25 @@ phys_enrich_plot_v2 <- function(enrich.df,myname,nc=5){
 
 ```{r}
 
+phys.counts <- fread(work.dir %&% "analysis_files/phys94-ld-assigned.txt")$Physiology %>% 
+  table(.) %>% as.data.frame(.)
+names(phys.counts) <- c("phys","count")
 
-df4b <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted-V2.txt") %>% mod_thresh(.)
-df4b$physiology <- gsub("_"," ",df4b$physiology)
-
-
-
-plt4b <- phys_enrich_plot_v2(df4b,myname="Physiology enrichment for classifed loci (weighted)")
+```
 
 
+```{r}
 
-ggsave(plot=plt4b,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.png",width=12,height=3)
+
+df3 <- fread(work.dir %&% "analysis_files/phys94-enrich_weighted-V2.txt") %>% mod_thresh(.)
+df3$physiology <- gsub("_"," ",df3$physiology)
+df3$counts <- map(df3$physiology,function(p){
+  filter(phys.counts,phys==p)$count
+}) %>% as.integer(.)
 
 
-ggsave(plot=plt4b,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.pdf",width=12,height=3)
+plt3 <- phys_enrich_plot_v2(df3,myname="Physiology enrichment for classifed loci (weighted)")
+ggsave(plot=plt3,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.png",width=12,height=3)
+ggsave(plot=plt3,filename = plot.dir %&% "enrichment-phys_weighted-94-V2.pdf",width=12,height=3)
 ```
 
