--- a/revamp/06B_V_fine-mapping.Rmd
+++ b/revamp/06B_V_fine-mapping.Rmd
@@ -214,6 +214,7 @@ make_test_plot <- function(group.df){
                                                  "liver",
                                                  "muscle",
                                                  "adipose",
+                                                 "shared",
                                                  "peripheral",
                                                  "unclassified"))
   plt1 <- ggplot(data=test.df,aes(x=Group,y=-log(w.pval.max,base=10))) + 
@@ -240,8 +241,8 @@ make_test_plot <- function(group.df){
 
 ```{r}
 
-
-plt.list1 <- make_test_plot(filter(weighted.df,!(assigned_00=="shared")))
+#plt.list1 <- make_test_plot(filter(weighted.df,!(assigned_00=="shared")))
+plt.list1 <- make_test_plot(weighted.df)
   
 ggsave(plot=plt.list1[[1]],filename=plot.dir%&%"finemap_wilcox-compare-max_weighted_with-shared.png",height=3.5,width=4)
 
@@ -275,6 +276,7 @@ library("viridis")
     theme_bw() + geom_hline(yintercept=-log(0.05,base=10),
                             color=magma(10)[7],linetype=2) + 
     ylab(expression(-log[10](p[value]))) + 
+    scale_size(range=c(0.1,3.5),limits=c(0,350)) + 
     theme(axis.text.x=element_text(size=7)) +
     ggtitle("Improvement of max PPA over null") + 
     theme(axis.text.x=element_text(angle=30,vjust=0.6),
