--- a/revamp/07.2_V_plot-coexpression.Rmd
+++ b/revamp/07.2_V_plot-coexpression.Rmd
@@ -25,8 +25,49 @@ work.dir <- proj.dir %&% "revamp/"
 analysis.dir <- work.dir %&% "analysis_files/"
 plot.dir <- work.dir %&% "plots/"
 
+count.df1 <- fread(work.dir%&%"analysis_files/classifier_counts.txt")
+count.df2 <- fread(work.dir%&%"analysis_files/classifier_counts_with-shared.txt")
+
+```
+
+
+```{r}
+
+simpleCap <- function(x) {
+  s <- strsplit(x, " ")[[1]]
+  paste(toupper(substring(s, 1,1)), substring(s, 2),
+      sep="", collapse=" ")
+}
+
+append_classifer_counts <- function(w.df, count.df){
+  names(count.df) <- names(count.df) %>% tolower(.)  
+  names(count.df)[1] <- names(count.df)[1] %>% simpleCap(.)
+  w.df$classifer.count <- map(1:dim(w.df)[1],function(i){
+    row.df <- w.df[i,]
+    count <- filter(count.df,Threshold==row.df$threshold) %>% 
+     dplyr::select(.,one_of(as.character(unique(row.df$geneset)))) %>% as.integer(.)
+    if (row.df$geneset=="peripheral"){
+     count <- filter(count.df,Threshold==row.df$threshold) %>% 
+        dplyr::select(.,one_of("adipose","liver","muscle")) %>% sum(.)  
+    }
+  return(count)
+}) %>% as.integer(.)  
+  return(w.df)
+}
+
+```
+
+
+
+```{r}
+
 w.df <- fread(analysis.dir %&% "coexpress-enrich_weighted_p10Coding.txt") %>% 
-  na.omit(.)
+  na.omit(.) %>% append_classifer_counts(.,count.df1)
+
+w.df2 <- fread(analysis.dir %&%
+                 "coexpress-enrich_weighted_p10Coding_with-shared.txt") %>% 
+  na.omit(.) %>% append_classifer_counts(.,count.df2)
+
 ```
 
 
@@ -35,10 +76,8 @@ w.df <- fread(analysis.dir %&% "coexpress-enrich_weighted_p10Coding.txt") %>%
 
 plot_enrich <- function(plot.df,nrow1=FALSE){
   plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
-    geom_point(size=3,aes(shape=geneset,fill=log_pval),
-               alpha=0.7) #+ 
-    #geom_hline(yintercept = -log(0.05/54,base=10)) + 
-    #geom_hline(yintercept = -log(0.05,base=10),linetype=2)
+    geom_point(aes(size=classifer.count,shape=geneset,fill=log_pval),
+               alpha=0.7) 
   if (nrow1==TRUE){
     plt <- plt + facet_wrap(~threshold,nrow=1)
   } else{
@@ -51,10 +90,35 @@ plot_enrich <- function(plot.df,nrow1=FALSE){
           strip.text = element_text(size=17),
           axis.title=element_text(size=17),
           legend.key.size = unit(7,"line")) + 
+    scale_size(range=c(1,3.5),limits=c(0,250)) + 
     coord_flip() + 
     theme_bw()
   return(plt)
 }
+
+plot_enrich_alt <- function(plot.df,nrow1=FALSE){
+  plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
+    geom_point(aes(size=classifer.count,shape=geneset,fill=log_pval),
+               alpha=0.7) 
+  if (nrow1==TRUE){
+    plt <- plt + facet_wrap(~threshold,nrow=1)
+  } else{
+    plt <- plt + facet_wrap(~threshold)
+  }
+  plt <- plt + scale_shape_manual(name="Gene set",values=c(21,22,23,24)) +
+    scale_fill_viridis(name="-log10(p)",direction = -1) + 
+    ylab("Enrichment") + xlab("Tissue") + 
+    theme_bw() + 
+    theme(axis.text.x=element_text(size=12,angle=30,vjust=0.5),
+          strip.text = element_text(size=12),
+          axis.title=element_text(size=12),
+          legend.key.size = unit(1,"line")) + 
+    scale_size(range=c(0.1,10),limits=c(0,250))# + 
+    #coord_flip() + 
+    #theme_bw()
+  return(plt)
+}
+
 
 ```
 
@@ -89,25 +153,23 @@ ggsave(plot=plt1b,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding20.
 keep.tissues <- c("Islet","Muscle...Skeletal","Liver","Adipose...Subcutaneous")
 sub.df <- filter(w.df,tissue %in% keep.tissues)
 
-plt2 <- plot_enrich(sub.df,nrow1=TRUE)
-ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss.png",width=8,height=4)
-ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss.pdf",width=8,height=4)
+plt2 <- plot_enrich_alt(sub.df,nrow1=TRUE)
+ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss.png",width=15,height=7)
+ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss.pdf",width=15,height=7)
 ```
 
 # Plots if we include "sharing" category 
 
 ```{r}
 
-w.df2 <- fread(analysis.dir %&% "coexpress-enrich_weighted_p10Coding_with-shared.txt") %>% 
-  na.omit(.)
 plt3 <- plot_enrich(w.df2)
 ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.png",width=12,height=12)
 ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.pdf",width=12,height=12)
 keep.tissues <- c("Islet","Muscle...Skeletal","Liver","Adipose...Subcutaneous")
 sub.df2 <- filter(w.df2,tissue %in% keep.tissues)
-plt4 <- plot_enrich(sub.df2,nrow1=TRUE)
-ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=8,height=4)
-ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.pdf",width=8,height=4)
+plt4 <- plot_enrich_alt(sub.df2,nrow1=TRUE)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=15,height=7)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.pdf",width=15,height=7)
 
 ```
 
